i forgor to flush

--- a/src/micrograd/micrograd.ipynb
+++ b/src/micrograd/micrograd.ipynb
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1226,46 +1226,9 @@
        "41"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mlp = MLP(3, [4, 4, 1])\n",
-    "len(mlp.parameters()) # 3*4+4 + 4*4+4 + 4*1+1 = 41"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ITERATION  0: LOSS = 4.113\n",
-      "ITERATION  1: LOSS = 2.758\n",
-      "ITERATION  2: LOSS = 1.734\n",
-      "ITERATION  3: LOSS = 0.871\n",
-      "ITERATION  4: LOSS = 0.266\n",
-      "ITERATION  5: LOSS = 0.088\n",
-      "ITERATION  6: LOSS = 0.044\n",
-      "ITERATION  7: LOSS = 0.025\n",
-      "ITERATION  8: LOSS = 0.015\n",
-      "ITERATION  9: LOSS = 0.010\n",
-      "ITERATION 10: LOSS = 0.008\n",
-      "ITERATION 11: LOSS = 0.007\n",
-      "ITERATION 12: LOSS = 0.007\n",
-      "ITERATION 13: LOSS = 0.008\n",
-      "ITERATION 14: LOSS = 0.012\n",
-      "ITERATION 15: LOSS = 0.020\n",
-      "ITERATION 16: LOSS = 0.034\n",
-      "ITERATION 17: LOSS = 0.052\n",
-      "ITERATION 18: LOSS = 0.060\n",
-      "ITERATION 19: LOSS = 0.047\n"
-     ]
     }
    ],
    "source": [
@@ -1277,6 +1240,43 @@
     "]\n",
     "ys = [Value(1.0), Value(-1.0), Value(-1.0), Value(1.0)] # desired targets\n",
     "\n",
+    "mlp = MLP(3, [4, 4, 1])\n",
+    "len(mlp.parameters()) # 3*4+4 + 4*4+4 + 4*1+1 = 41"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ITERATION  0: LOSS = 5.440\n",
+      "ITERATION  1: LOSS = 4.935\n",
+      "ITERATION  2: LOSS = 4.537\n",
+      "ITERATION  3: LOSS = 4.230\n",
+      "ITERATION  4: LOSS = 3.993\n",
+      "ITERATION  5: LOSS = 3.808\n",
+      "ITERATION  6: LOSS = 3.660\n",
+      "ITERATION  7: LOSS = 3.539\n",
+      "ITERATION  8: LOSS = 3.439\n",
+      "ITERATION  9: LOSS = 3.355\n",
+      "ITERATION 10: LOSS = 3.283\n",
+      "ITERATION 11: LOSS = 3.219\n",
+      "ITERATION 12: LOSS = 3.163\n",
+      "ITERATION 13: LOSS = 3.112\n",
+      "ITERATION 14: LOSS = 3.065\n",
+      "ITERATION 15: LOSS = 3.020\n",
+      "ITERATION 16: LOSS = 2.977\n",
+      "ITERATION 17: LOSS = 2.935\n",
+      "ITERATION 18: LOSS = 2.892\n",
+      "ITERATION 19: LOSS = 2.849\n"
+     ]
+    }
+   ],
+   "source": [
     "loss: Value = None\n",
     "for iteration in range(20):\n",
     "  ypreds = [mlp(x)[0] for x in xs]\n",
@@ -1284,7 +1284,16 @@
     "  \n",
     "  print(f\"ITERATION {iteration:2d}: LOSS = {loss.data:.3f}\")\n",
     "  \n",
+    "  # flushing gradients\n",
+    "  for param in mlp.parameters():\n",
+    "    param.grad = 1\n",
+    "  for x in xs:\n",
+    "    for x_i in x:\n",
+    "      x_i.grad = 0\n",
+    "  for y in ys:\n",
+    "    y.grad = 0\n",
     "  loss.backward()\n",
+    "  \n",
     "  for param in mlp.parameters():\n",
     "    param.data -= 0.01 * param.grad\n",
     "# loss.draw_graph()\n",
