--- a/makemore/data/hnames.ipynb
+++ b/makemore/data/hnames.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -434,20 +434,20 @@
        "(31376, 1)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names = np.array(open(\"names.txt\").readlines())\n",
+    "names = np.array(open(\"hnames.txt\").readlines())\n",
     "names = names.reshape((names.shape[0], 1))\n",
     "names.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "(31376, 1)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -477,6 +477,68 @@
      "text": [
       "(27922, 1)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>strange</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>girl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>a-chan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>senpai</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name\n",
+       "2        a\n",
+       "2  strange\n",
+       "2     girl\n",
+       "5   a-chan\n",
+       "6   senpai"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -485,17 +547,24 @@
     "df_names.drop_duplicates(inplace=True)\n",
     "\n",
     "misc_mask = df_names[\"name\"].str.contains(\"[^a-z\\ \\-]\", regex=True)\n",
-    "df_names = df_names[~misc_mask]\n",
-    "print(df_names.shape)\n"
+    "df_names: pd.DataFrame = df_names[~misc_mask]\n",
+    "print(df_names.shape)\n",
+    "\n",
+    "# explosion\n",
+    "df_names[\"name\"] = df_names[\"name\"].str.split()\n",
+    "df_names = df_names.explode(column=\"name\")\n",
+    "df_names.drop_duplicates(inplace=True)\n",
+    "\n",
+    "df_names.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_names.to_csv(\"hnames.csv\", index=False, header=False)"
+    "df_names.to_csv(\"hnames-exploded.csv\", index=False, header=False)"
    ]
   },
   {
