--- a/makemore/makemore-mlp.ipynb
+++ b/makemore/makemore-mlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "4      akari kisaragi"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        " 'z': 28}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "(torch.Size([371786, 5, 29]), torch.float32, torch.Size([371786]), torch.int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "6087"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
    "source": [
     "batch_size = initial_batch_size\n",
     "print(batch_size)\n",
-    "for iteration in range(120000, 150000):\n",
+    "for iteration in range(200000):\n",
     "    batch_idxs = torch.randint(0, X_oh_train.shape[0], (batch_size,), generator=generator)\n",
     "    X_batch = X_oh_train[batch_idxs]\n",
     "    y_batch = y_train[batch_idxs]\n",
@@ -338,8 +338,8 @@
     "            p.data += -0.05 * p.grad\n",
     "        elif iteration < 90000:\n",
     "            batch_size = initial_batch_size * 4\n",
-    "            p.data += -0.01 * p.grad\n",
-    "        elif iteration < 120000:\n",
+    "            p.data += -0.05 * p.grad\n",
+    "        else:\n",
     "            batch_size = initial_batch_size * 8\n",
     "            p.data += -0.05 * p.grad"
    ]
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -451,13 +451,103 @@
       "totsuzui\n",
       "dasana\n",
       "nei\n",
-      "rarawa\n"
+      "rarawa\n",
+      "osusaka\n",
+      "rii\n",
+      "soptokamurichira\n",
+      "kaiko\n",
+      "saa\n",
+      "renelb\n",
+      "mananananoya\n",
+      "minona\n",
+      "rinyame\n",
+      "rile\n",
+      "rayori\n",
+      "sitpae\n",
+      "mimukasano\n",
+      "hiroba\n",
+      "yadama\n",
+      "torigi\n",
+      "isumi\n",
+      "koshi\n",
+      "tari\n",
+      "ari\n",
+      "tasuorayaka\n",
+      "shio\n",
+      "sayue\n",
+      "saonofamaba\n",
+      "hokie\n",
+      "hiromo\n",
+      "aako\n",
+      "yupi\n",
+      "natsu\n",
+      "maruri\n",
+      "latiod\n",
+      "ainci\n",
+      "yumvuu\n",
+      "megt\n",
+      "igino\n",
+      "anehana\n",
+      "mamo\n",
+      "eokaa\n",
+      "orouki\n",
+      "yuzuka\n",
+      "karuna\n",
+      "muhi\n",
+      "yazukiwo\n",
+      "srajima\n",
+      "kanarimi\n",
+      "chinamait\n",
+      "hinaki\n",
+      "kanaki\n",
+      "tazumi\n",
+      "ninmell\n",
+      "tanpki\n",
+      "yuuko\n",
+      "anofa\n",
+      "nalean\n",
+      "feruka\n",
+      "arilota-hayara\n",
+      "youeri\n",
+      "hanakura\n",
+      "kazubazu\n",
+      "rai\n",
+      "sclikira\n",
+      "yuminaie\n",
+      "ryoukana\n",
+      "rincheard\n",
+      "minosselashimuro\n",
+      "prelda\n",
+      "ruki\n",
+      "mai\n",
+      "saora\n",
+      "ceorori\n",
+      "funna\n",
+      "rir\n",
+      "shazuki\n",
+      "shirora\n",
+      "rinaue\n",
+      "yunoka\n",
+      "taa\n",
+      "mosaki\n",
+      "an\n",
+      "maki\n",
+      "maki\n",
+      "tana\n",
+      "hatre\n",
+      "kara\n",
+      "rats\n",
+      "taona\n",
+      "an\n",
+      "younogaca\n",
+      "kynoru\n",
+      "amiy\n"
      ]
     }
    ],
    "source": [
     "generator = torch.Generator().manual_seed(16)\n",
-    "for _ in range(10):\n",
+    "for _ in range(100):\n",
     "    sampled_chars = [0] * block_size\n",
     "    while True:\n",
     "        context = torch.tensor([sampled_chars[-block_size:]])\n",
