--- a/makemore/makemore-mlp.ipynb
+++ b/makemore/makemore-mlp.ipynb
@@ -15,68 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>tsuzumi tatehaya</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>esther archang</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ayano miyamori</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>myuria rosa gallus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>akari kisaragi</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                 name\n",
-       "0    tsuzumi tatehaya\n",
-       "1      esther archang\n",
-       "2      ayano miyamori\n",
-       "3  myuria rosa gallus\n",
-       "4      akari kisaragi"
+       "((27922, 1),\n",
+       "                  name\n",
+       " 0    tsuzumi tatehaya\n",
+       " 1      esther archang\n",
+       " 2      ayano miyamori\n",
+       " 3  myuria rosa gallus\n",
+       " 4      akari kisaragi)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +39,7 @@
     "hnames = pd.read_csv(\"./data/hnames.csv\", )\n",
     "np.random.seed(16) # inital alphabetical order\n",
     "hnames[\"name\"] = np.random.permutation(hnames[\"name\"])\n",
-    "hnames.head()"
+    "hnames.shape, hnames.head()"
    ]
   },
   {
